# SAF_Workshop_ROB4

./: Flowchart.drawio
PLC/: PLC_RAW.txt
PLC/Different dependencies/Libaries/: OPAK_RFID-miaad-MIAD.opt
PLC/Libaries/: CAA CanOpen Stack.compiled-library  OPAK_RFID.LIBRARY
PLC/PLC_miniproject_code/: PLC_miniproject-Jens-DESKTOP-UBBIH00.opt  PLC_miniproject.project  PLC_miniproject.project.~u
PLC/Super Simple Program/: Super Simple Program-Jens-DESKTOP-UBBIH00.opt  Super Simple Program.Device.Application.1f09ada2-3489-4573-92f6-feb7783277fe.compileinfo  Super Simple Program.project
PLC2/: PLC_miniproject.project.~u
PLC2/PLC_miniproject_code/: PLC_miniproject-Jens-DESKTOP-UBBIH00.opt  PLC_miniproject.project
ROS/: CMakeLists.txt  package.xml
ROS/msg/: StationReport.msg
ROS/src/: Server.py
